# vbcplusfrombuck

./: .gitattributes  CMakeLists.txt  README.md  ffmpegConfTest.cpp  test.txt
doc/: README.md
resources/: sound2.aac
vbcService/include/: AudioCap.h  CommonFunction.h  Device.h  DeviceManager.h  IOrderControl.h  Logger.h  MQTTClient.h  MergeStream.h  OrderControl.h  PGMStream.h  PVWStream.h  PacketToFile.h  Stream.h  StreamManager.h  TCPConnection.h  VideoCap.h  XFade.h  XRtmp.h  XVideoEffect.h  XVideoLogo.h  XVideoSplitScreen.h  XVideoSubtitle.h  common.h  mtcnn.h  network.h
vbcService/src/: AudioCap.cpp  CommonFunction.cpp  Device.cpp  DeviceManager.cpp  Logger.cpp  MQTTClient.cpp  MergeStream.cpp  OrderControl.cpp  PGMStream.cpp  PVWStream.cpp  PacketToFile.cpp  Stream.cpp  StreamManager.cpp  TCPConnection.cpp  VideoCap.cpp  XFade.cpp  XRtmp.cpp  XVideoEffect.cpp  XVideoLogo.cpp  XVideoSplitScreen.cpp  XVideoSubtitle.cpp  mtcnn.cpp  vbcService.cpp
vbcService/test/: DeviceManagerTest.cpp  OrderControlTest.cpp  TCPConnectionTest.cpp  UnitTestMain.cpp
vendors/include/: consoleColor.h  openblas_config.h
vendors/include/ace/Compression/: libACE_Compression.so.6.5.0
vendors/include/ace/Compression/rle/: libACE_RLECompression.so.6.5.0
vendors/include/ace/ETCL/: libACE_ETCL.so.6.5.0  libACE_ETCL_Parser.so.6.5.0
vendors/include/ace/Monitor_Control/: libACE_Monitor_Control.so.6.5.0
vendors/lib/: libass.so.9.0.2  libavdevice.so.58.10.100  libavfilter.so.7.85.100  libavformat.so.58.45.100  libavresample.so.4.0.0  libavutil.so.56.51.100  libboost_atomic.so.1.74.0  libboost_chrono.so.1.74.0  libboost_container.so.1.74.0  libboost_context.so.1.74.0  libboost_contract.so.1.74.0  libboost_coroutine.so.1.74.0  libboost_date_time.so.1.74.0  libboost_fiber.so.1.74.0  libboost_filesystem.so.1.74.0  libboost_graph.so.1.74.0  libboost_iostreams.so.1.74.0  libboost_locale.so.1.74.0  libboost_log.so.1.74.0  libboost_log_setup.so.1.74.0  libboost_math_c99.so.1.74.0  libboost_math_c99f.so.1.74.0  libboost_math_c99l.so.1.74.0  libboost_math_tr1.so.1.74.0  libboost_math_tr1f.so.1.74.0  libboost_math_tr1l.so.1.74.0  libboost_nowide.so.1.74.0  libboost_prg_exec_monitor.so.1.74.0  libboost_program_options.so.1.74.0  libboost_random.so.1.74.0  libboost_regex.so.1.74.0  libboost_serialization.so.1.74.0  libboost_stacktrace_addr2line.so.1.74.0  libboost_stacktrace_basic.so.1.74.0  libboost_stacktrace_noop.so.1.74.0  libboost_system.so.1.74.0  libboost_thread.so.1.74.0  libboost_timer.so.1.74.0  libboost_type_erasure.so.1.74.0  libboost_unit_test_framework.so.1.74.0  (+40 more)
vendors/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-noconfig.cmake  eclipse-paho-mqtt-cConfig.cmake
vendors/lib/pkgconfig/: fdk-aac.pc  libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  x264.pc  x265.pc
